force-app/main/default/objects/Additional_Address__c/Additional_Address__c.object-meta.xml
<CustomObject>
    <description>Offers the ability to add additional addresses to Account records</description>
    <label>Additional Address</label>
    <nameField>
        <label>Additional Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>