force-app/main/default/objects/Additional_Address__c/fields/Account_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Code__c</fullName>
    <formula>Account__r.Customer_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status Code</label>
    <type>Text</type>
</CustomField>