force-app/main/default/objects/Additional_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c &amp; BR() &amp;
City__c  &amp; BR() &amp;
State__c  &amp; BR() &amp;
ZIP_Postal_Code__c  &amp; BR() &amp;
Country__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>