force-app/main/default/objects/Additional_Address__c/fields/Other_Address_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Type_Detail__c</fullName>
    <inlineHelpText>If Address Type is &quot;Other (Add Notes)&quot; briefly describe the address type here</inlineHelpText>
    <label>Add&apos;l Address Notes</label>
    <length>40</length>
    <type>Text</type>
</CustomField>