force-app/main/default/objects/Additional_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>