force-app/main/default/objects/Additional_Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>Enter street number and name. Enter separate lines for suite or other references</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>