force-app/main/default/objects/Additional_Address__c/validationRules/Addl_Address_M3_Cannot_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Addl_Address_M3_Cannot_Edit</fullName>
    <active>true</active>
    <description>Users cannot edit Additional Address records integrated with M3 (Mailing Address)</description>
    <errorConditionFormula>AND(
         NOT( ISBLANK(RWS_Id__c)), 
         $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
         $Profile.Name &lt;&gt; &quot;Cast Iron Integration&quot; 
)</errorConditionFormula>
    <errorMessage>This Address is tied to M3/Movex and cannot be edited. To change this data, create an &quot;Account Info Change Request&quot; case.</errorMessage>
</ValidationRule>