force-app/main/default/objects/Additional_Address__c/validationRules/Addl_Address_Other_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Addl_Address_Other_Requires_Notes</fullName>
    <active>true</active>
    <description>If &quot;Other&quot; address type is selected, notes are required</description>
    <errorConditionFormula>ISPICKVAL( Address_Type__c, &quot;Other (Add Note)&quot;) &amp;&amp;  ISBLANK( Other_Address_Type_Detail__c )</errorConditionFormula>
    <errorDisplayField>Other_Address_Type_Detail__c</errorDisplayField>
    <errorMessage>If &quot;Other (Add Note) Address Type is selected, please describe in the &quot;Add&apos;l Address Notes&quot; field</errorMessage>
</ValidationRule>